--- a/index.html
+++ b/index.html
@@ -77,6 +77,86 @@
         </div>
     </div>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="container">
+                            <dl class="row">
+                                <dt class="col-12 col-sm-3">Number of Guests</dt>
+                                <dd class="col-12 col-sm-9 d-flex">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                        <label class="form-check-label" for="inlineRadio3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                        <label class="form-check-label" for="inlineRadio4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                        <label class="form-check-label" for="inlineRadio5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                        <label class="form-check-label" for="inlineRadio6">6</label>
+                                    </div>
+                                </dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-12 col-sm-3">
+                                    <label class="col-form-label justify-content-start">Section</label>
+                                </dt>
+                                
+                                <dd class="btn-group btn-group-toggle col-12 col-sm-9" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                    </label>
+                                </dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-12 col-sm-3"><label for="date" class="justify-content-start">Date and Time</label></dt>
+                                <dd class="col-12 col-sm-9">
+                                    <div class="form-group row">
+                                        <div class="col-12 col-md-5">
+                                            <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                        </div>
+                                        <div class="col-12 col-md-5">
+                                            <input type="time" class="form-control" id="time" name="date" placeholder="Time">
+                                        </div>
+                                    </div>
+                                </dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-sm-3"></dt>
+                                <dd class="col-12 col-sm-9">
+                                    <button type="button" class="btn btn-default btn-lg" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary btn-lg">Reserve</button>
+                                </dd>
+                            </dl>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header align-items-center">
@@ -88,8 +168,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
-                        title="Or Call us at  <br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserveform">
+                    <a role="button" class="btn btn-block nav-link btn-warning" href="#reserveform"
+                    data-toggle="modal" data-target="#reserveModal">
                         Reserve Table
                     </a>
                 </div>
@@ -317,11 +397,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+    
 </body>
 
 </html>
